<resources>
    <string name="app_name">Xpro</string>
    <string name="logo">TODO LOGO</string>
    <string name="login">Votre adresse mail</string>
    <string name="pass">Votre mot de passe</string>
    <string name="confpass">Confirmez votre mot de passe</string>
    <string name="conn">CONNEXION</string>
    <string name="creationaccount">CREER VOTRE COMPTE</string>
    <string name="newaccount">Création d\'un nouveau compte</string>
    <string name="ihaveaccount">j\'ai un compte</string>
    <string name="email_error">Erreur lors de la saisie de l\'adresse email.</string>
    <string name="password_error">Erreur lors de la saisie du mot de passe.</string>
    <string name="password_conf_error">Erreur de confirmation du mot de passe.</string>
    <string name="create_account_ok">Création de compte réussie.</string>
    <string name="create_account_error">Erreur lors de la création du compte.</string>
    <string name="sign_in_ok">Connexion réussie.</string>
    <string name="sign_in_error">Erreur lors de la connexion de l\'utilisateur.</string>
    <string name="pd_conn_user">Connexion de l\'utilisateur.</string>
    <string name="pd_create_user">Création du compte de l\'utilisateur.</string>
    <string name="fabAddItem">AJOUTER UN ARTICLE</string>
    <string name="search">RECHERCHE</string>
    <string name="settings">PARAMETRES</string>
    <string name="add_item">AJOUTER UN ARTICLE</string>
    <string name="item_titre">Titre de l\'article</string>
    <string name="item_description">Description de l\'article</string>
    <string name="addphoto">AJOUTER UNE IMAGE</string>
    <string name="imArticle">PHOTO DE L\'ARTICLE.</string>
    <string name="add_article">AJOUTER UN ARTICLE</string>
    <string name="categorieArticle">Catégorie de l\'article.</string>
    <string name="category_error">Erreur lors de la saisie de la catégorie de l\'article.</string>
    <string name="titre_error">Erreur lors de la saisie du titre de l\'article.</string>
    <string name="description_error">Erreur lors de la saisie de la description de l\'article.</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALERIE</string>
    <string name="select_image">Sellection d\'une image.</string>
    <string name="question_image">Où voulez-vous sellectionner votre image ?</string>
    <string name="enable_camera_permission">Veuillez activer les autorisations de caméra et de stockage.</string>
    <string name="enable_storage_permission">Veuillez activer les autorisations de stockage.</string>
    <string name="add_new_article">Nouvel article</string>
    <string name="add_new_message_article">Ajout d\'un nouvel article.</string>
    <string name="operation_reussie">Ajout de l\'article réussie.</string>
    <string name="check_email">VERIFIEZ VOTRE EMAIL</string>
    <string name="email_indication">Saisissez votre adresse email afin de vous connecter à la lateforme Xpro.</string>
    <string name="cover_image">IMAGE DE L\'ARTICLE</string>
    <string name="description_article">Description de l\'article</string>
    <string name="titre_article">Titre de l\'article</string>
    <string name="mail_sent">Un lien vient de vous être transmis dans votre boite mail.</string>
    <string name="save_user_info_successfully">Sauvegarde des informations de l\'utilisateur réussie</string>
    <string name="phone">Votre numéro de téléphone</string>
    <string name="full_name">Votre nom complet</string>
    <string name="name_error">Erreur lors de la saisie du nom de l\'utilisateur</string>
    <string name="phone_error">Erreur lors de la saisie du numéro de téléphone de l\'utilisateur</string>
    <string name="user_profile">Profile de l\'utilisateur</string>
    <string name="user_message">Sauvegarde du profile de l\'utilisateur.</string>
    <string name="number_view">17 Vues</string>
    <string name="date_publication_article">Date de publication de l\'article</string>
    <string name="details_publication_article">Publié le 10 Aout 2021 | 530 Vues</string>
    <string name="item_details_pluriel">Publié le %s | %s Vue</string>
    <string name="item_details">Publié le %s | %s Vues</string>
    <string name="maj_profile">MAJ PROFILE</string>
    <string name="forget_password">Mot de passe oublié</string>
    <string name="utilisateur_profile">Profile de l\'utilisateur</string>
    <string name="pocket_expert">Votre expert de poche</string>
    <string name="new_article">Nouvel article</string>
    <string name="your_settings">Vos paramètres</string>
    <string name="article_legende">Cet article a été publié le 10 Août 2021 à 10H15</string>
    <string name="comments">Commentaires</string>
    <string name="share_article">Partager cet article</string>
    <string name="warning_article">Signaler cet article</string>
    <string name="collapse_logo">LOGO COLLAPSING TOOLBAR</string>
    <string name="nom_de_l_utilisateur">Nom de l\'utilisateur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article">Article</string>
    <string name="commentaires">Commentaires</string>
    <string name="app_mode">Mode d\'affichage (Ligth Mode)</string>
    <string name="app_mode_ligth">Mode d\'affichage (Ligth Mode)</string>
    <string name="app_mode_darck">Mode d\'affichage (Darck Mode)</string>
    <string name="oui">OUI</string>
    <string name="non">NON</string>
    <string name="activate_dark_mode">Activation du DARK MODE</string>
    <string name="dark_mode">Voulez vous activer le DARK MODE ?</string>
    <string name="ligth_mode">Voulez vous désactiver le DARK MODE ?</string>
    <string name="app_language">Langue(Francais)</string>
    <string name="whatsapp_phone">Téléphone whatsapp</string>
</resources>