<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/imArticleLogo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cover_image"
        android:src="@drawable/ic_action_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imArticleLogo"
        android:background="@color/green_transp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre_article"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/description_article"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_publication_article"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_action_details" />

    </LinearLayout>

</RelativeLayout>