<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_transp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvIndication"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:text="@string/email_indication"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtvEmail"
        android:layout_below="@+id/tvIndication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/edtvEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_action_logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCheckEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:contentDescription="@string/check_email" />

</RelativeLayout>