<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!--android:background="@color/lm_green_4"-->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/im_user"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/collapse_logo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_action_user" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/background_ll"
                    android:layout_alignBottom="@+id/im_user"
                    android:padding="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nom_de_l_utilisateur"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/whatsapp_phone" />

                </LinearLayout>

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_page_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/background_edtv"
                android:padding="10dp"
                android:text="@string/app_mode"
                android:textStyle="bold" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_page_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/background_edtv"
                android:checked="true"
                android:padding="10dp"
                android:text="@string/app_language"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/background_edtv"
                android:padding="10dp"
                android:text="@string/comments"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_action_next" />

            <TextView
                android:id="@+id/tvWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/background_edtv"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/warning_article"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_action_warning" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:background="?attr/background_edtv"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/share_article"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_action_share" />

            <TextView
                android:id="@+id/tvLegende"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/article_legende"
                android:textSize="11sp" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>