<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imArticle"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/imArticle"
        android:src="@drawable/ic_action_logo" />

    <AutoCompleteTextView
        android:id="@+id/actvCategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imArticle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/categorieArticle"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green" />

    <EditText
        android:id="@+id/edtvItemtitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actvCategorie"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/item_titre"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green" />

    <EditText
        android:id="@+id/edtvItemdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtvItemtitre"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@+id/btAddarticle"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/item_description"
        android:inputType="text"
        android:minHeight="200dp"
        android:padding="20dp"
        android:textColor="@color/green"
        android:textColorHint="@color/green" />

    <Button
        android:id="@+id/btAddarticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_article" />

</RelativeLayout>