<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_action_logo" />

    <RelativeLayout
        android:id="@+id/rlCentre"
        android:layout_below="@+id/ivLogo"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edtvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/edtvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtvLogin"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/edtvConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtvPassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/confpass"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/green"
            android:textColorHint="@color/green" />

    </RelativeLayout>

    <Button
        android:id="@+id/btLogCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlCentre"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/newaccount" />

</RelativeLayout>